[gd_scene load_steps=2 format=3 uid="uid://pli632saa84k"]

[ext_resource type="Script" path="res://physics/ui/esc_menu/save_menu.gd" id="1"]

[node name="Control" type="Panel"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.507
anchor_right = 0.5
anchor_bottom = 0.507
offset_left = -152.0
offset_top = -144.2
offset_right = 152.0
offset_bottom = 135.8
script = ExtResource("1")

[node name="FileName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 176.0
offset_bottom = 32.0
caret_blink = true

[node name="Save" type="Button" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 8.0
offset_right = -72.0
offset_bottom = 32.0
text = "Save"

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = 32.0
text = "Cancel"

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 304.0
offset_bottom = 280.0

[node name="List" type="ItemList" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
allow_reselect = true
same_column_width = true

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
